--- a/실습/socar/css/index.css
+++ b/실습/socar/css/index.css
@@ -1,11 +1,11 @@
 :root {
-    --main-color : #00B8FF;
-    --heading-font-color : #374553;
-    --paragraph-font-color : #AAAAAA;
-    --background-gray-color : #f7f8f9; 
-    --footer-background-color : #28323C;
-    --footer-nav-font-color : #C5C8CE;
-    --footer-font-color :#646f7c;
+    --main-color: #00B8FF;
+    --heading-font-color: #374553;
+    --paragraph-font-color: #AAAAAA;
+    --background-gray-color: #f7f8f9;
+    --footer-background-color: #28323C;
+    --footer-nav-font-color: #C5C8CE;
+    --footer-font-color: #646f7c;
 }
 
 body {
@@ -27,6 +27,28 @@ header {
     top: 0;
     padding: 16px 32px;
     box-sizing: border-box;
+    transition: 0.5s;
+}
+
+header svg {
+    fill: white;
+}
+
+header.hide {
+    transform: translateY(-100%);
+}
+
+header.scrolled {
+    background-color: #ffffff80;
+}
+
+header.scrolled svg {
+    fill: var(--main-color);
+}
+
+header.scrolled .hamberger::before,
+header.scrolled .hamberger::after {
+    background-color: var(--main-color);
 }
 
 .header-inner {
@@ -39,7 +61,7 @@ h1 {
     position: relative;
 }
 
-h1 > a {
+h1>a {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -68,12 +90,13 @@ h1 > a {
     gap: 6px;
 }
 
-.hamberger::before,.hamberger::after {
+.hamberger::before,
+.hamberger::after {
     display: block;
     content: '';
     width: 80%;
     height: 3px;
-    background-color: var(--main-color);
+    background-color: #fff;
 }
 
 .hamberger::after {
@@ -89,7 +112,7 @@ h1 > a {
     align-items: center;
 }
 
-#cover > h2 {
+#cover>h2 {
     text-align: center;
     font-size: 64px;
     color: white;
@@ -98,7 +121,7 @@ h1 > a {
 }
 
 #advantages-container {
-    padding : 80px 32px;
+    padding: 80px 32px;
     display: flex;
     flex-direction: column;
 }
@@ -113,7 +136,7 @@ h1 > a {
     margin-bottom: 0;
 }
 
-.advantage > h2 {
+.advantage>h2 {
     font-size: 40px;
     font-weight: 600;
     color: var(--heading-font-color);
@@ -123,7 +146,7 @@ h1 > a {
     gap: 4px;
 }
 
-.advantage > h2::after {
+.advantage>h2::after {
     display: block;
     content: '';
     width: 10px;
@@ -134,7 +157,7 @@ h1 > a {
 
 }
 
-.advantage > p {
+.advantage>p {
     font-size: 18px;
     font-weight: 600;
     color: var(--paragraph-font-color);
@@ -213,7 +236,7 @@ footer nav {
     line-height: 200%;
 }
 
-.information > div {
+.information>div {
     flex-basis: 50%;
 }
 
@@ -250,14 +273,14 @@ footer nav {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.417);
 }
 
-#app-download > p {
+#app-download>p {
     position: relative;
     z-index: 1;
     color: white;
     font-size: 20px;
 }
 
-#app-download > p::after {
+#app-download>p::after {
     display: inline-block;
     content: '';
     width: 16px;
@@ -266,7 +289,7 @@ footer nav {
 }
 
 
-#app-download > .incline {
+#app-download>.incline {
     transform: skewX(-30deg) translateX(24px);
 }
 
@@ -279,19 +302,19 @@ footer nav {
         font-size: 24px;
         height: 300px;
     }
-    
+
     .incline {
         transform: translateX(86%) skewX(-30deg);
     }
-    
+
     #app-download {
         width: 96vw;
         height: 60px;
     }
 
-    #app-download > .app-icon {
+    #app-download>.app-icon {
         width: 40px;
     }
 
-    
+
 }
