--- a/실습/socar/css/index.css
+++ b/실습/socar/css/index.css
@@ -103,6 +103,10 @@ h1>a {
     margin-left: auto;
 }
 
+main {
+    overflow: hidden;
+}
+
 #cover {
     height: 100vh;
     background-image: url(../image/main_visual_fullscreen.jpg);
@@ -189,6 +193,8 @@ h1>a {
 }
 
 .incline {
+    transition: 1s;
+    left: 0%;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -271,6 +277,8 @@ footer nav {
     overflow: hidden;
     width: 60px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.417);
+
+    animation: 디졸브 1s 0.66s both;
 }
 
 #app-download>p {
@@ -278,6 +286,8 @@ footer nav {
     z-index: 1;
     color: white;
     font-size: 20px;
+
+    animation: 디졸브 1s both;
 }
 
 #app-download>p::after {
@@ -291,6 +301,8 @@ footer nav {
 
 #app-download>.incline {
     transform: skewX(-30deg) translateX(24px);
+
+    animation: 나타나기 1s 0.33s both;
 }
 
 @media screen and (max-width : 800px) {
@@ -317,4 +329,67 @@ footer nav {
     }
 
 
+}
+
+@keyframes 디졸브 {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes 나타나기 {
+    from {
+        left: 100%;
+    }
+
+    to {
+        left: 0%;
+    }
+}
+
+.hamberger-click {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #000000dd;
+}
+
+.hamberger-nav {
+    width: 500px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #28323c;
+    height: 100vh;
+    padding: 0 32px;
+}
+
+.hamberger-nav>div {
+    display: flex;
+    flex-direction: column;
+    padding: 32px 0;
+    border-bottom: 1px solid #555;
+}
+
+.hamberger-nav>div:last-child {
+    border: none;
+}
+
+.hamberger-nav>div>a {
+    padding: 16px 0;
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.5s;
+}
+
+.hamberger-nav>div>a:hover {
+    color: var(--main-color);
 }
