--- a/실습/socar/css/index.css
+++ b/실습/socar/css/index.css
@@ -377,6 +377,7 @@ footer nav {
     width: 100%;
     height: 100vh;
     background-color: #000000dd;
+    display: none;
 }
 
 .hamberger-nav {
@@ -387,6 +388,18 @@ footer nav {
     background-color: #28323c;
     height: 100vh;
     padding: 0 32px;
+
+    transition: 0.5s;
+    transform: translateX(100%);
+}
+
+.hamberger-click.active {
+
+    display: block;
+}
+
+.hamberger-click.active>.hamberger-nav {
+    /* transform: none; */
 }
 
 .hamberger-nav>div {
