--- a/clone/welcomeFNB/css/index.css
+++ b/clone/welcomeFNB/css/index.css
@@ -24,9 +24,48 @@ header {
     z-index: 100;
 }
 
+header.open-menu {
+    background-color: white;
+    border-bottom: 1px solid #EEE;
+}
+
+header.open-menu::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    position: absolute;
+    top: calc(100% + 1px);
+}
+
+header.open-menu .none-hover-logo {
+    display: none;
+}
+
+.hover-logo {
+    display: none;
+}
+
+header.open-menu .hover-logo {
+    display: block;
+}
+
+
 h1#logo {
     position: absolute;
     left: 32px;
+}
+
+h1#logo>a {
+    display: block;
+    width: 158px;
+    height: 26px;
+}
+
+h1#logo>a>img {
+    width: 100%;
+    height: 100%;
 }
 
 .header-menu>ul {
@@ -36,9 +75,45 @@ h1#logo {
     font-size: 14px;
 }
 
+.header-inner-menu {
+    position: absolute;
+    top: calc(100% + 1px);
+    z-index: 10;
+    height: 40px;
+    width: 100%;
+    left: 0;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    opacity: 0;
+    transition: 0.2s;
+    display: none;
+}
+
+.header-inner-menu a:hover {
+    color: red;
+}
+
+header.open-menu .header-inner-menu {
+    display: flex;
+}
+
+.header-menu-list.active>a {
+    color: red;
+}
+
+.header-menu-list.active .header-inner-menu {
+    opacity: 1;
+    z-index: 20;
+}
+
 .header-menu a {
     color: white;
     text-decoration: none;
+}
+
+header.open-menu a {
+    color: #222;
 }
 
 .header-hamberger {
@@ -59,6 +134,10 @@ h1#logo {
     width: 100%;
     height: 2px;
     background-color: white;
+}
+
+header.open-menu .hamber-part {
+    background-color: #222;
 }
 
 section {
